--- a/backoffice.css
+++ b/backoffice.css
@@ -1,62 +1,77 @@
-.container-products {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    margin-inline: 20px;
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
+
+.container-fluid h2 {
+  font-family: "Caveat";
+  font-weight: bold;
+  font-size: 45px;
 }
 
+.container-products {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  margin-inline: 20px;
+}
 
 .card {
-    width: 275px;
-    height: 550px;
-    margin-block: 10px;
-    border: 1px solid black;
-    border-radius: 5px 5px 5px 0px;
-    text-align: center;
+  width: 275px;
+  height: auto;
+  margin-block: 10px;
+  border: 1px solid black;
+  border-radius: 5px 5px 5px 0px;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
 
 .card img {
-    width: 100%;
-    aspect-ratio: 1;
-    object-fit: cover;
+  width: 100%;
+  aspect-ratio: 1;
+  object-fit: cover;
 }
 
 .card button {
-    border-radius: 5px 5px 5px 0px;
+  border-radius: 5px 5px 5px 0px;
 }
 
 .button-card {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  margin-bottom: 10px;
 }
 
 .button-card button {
-    width: 75px;
-    height: 35px;
+  width: 75px;
+  height: 35px;
 }
 
 .form-add {
-    border: none;
-    background: white;
-    margin-left: 20px;
-    font-size: 20px;
+  border: none;
+  background: white;
+  margin-left: 20px;
+  font-size: 20px;
 }
 
 .form-add a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
 
 .backoffice {
-    border: none;
-    background: white;
-    margin-left: 20px;
-    font-size: 20px;
+  border: none;
+  background: white;
+  margin-left: 20px;
+  font-size: 20px;
 }
 
 .backoffice a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
+}
+
+.details a {
+  text-decoration: none;
+  color: black;
 }
