--- a/form.css
+++ b/form.css
@@ -1,11 +1,19 @@
+@import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
+
+.container-fluid h2 {
+  font-family: "Caveat";
+  font-weight: bold;
+  font-size: 45px;
+}
+
 .nav-item button {
-    border: none;
-    background: none;
-    font-size: 20px;
-    margin-left: 20px;
+  border: none;
+  background: none;
+  font-size: 20px;
+  margin-left: 20px;
 }
 
 .nav-item button a {
-    text-decoration: none;
-    color: black;
+  text-decoration: none;
+  color: black;
 }
