--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
 
+.container-fluid {
+    box-shadow: 0px 5px #e1e1e1;
+}
+
 .container-fluid h2 {
   font-family: "Caveat";
   font-weight: bold;
   font-size: 45px;
+  text-shadow: 4px 4px 4px rgb(162, 160, 160);
 }
 
 .container-products {
