--- a/detail.css
+++ b/detail.css
@@ -8,6 +8,7 @@
   font-family: "Caveat";
   font-weight: bold;
   font-size: 45px;
+  text-shadow: 4px 4px 4px rgb(162, 160, 160);
 }
 .nav-item button {
   border: none;
