--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@
 .container-products {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-between;
+  gap: 20px;
   margin-inline: 20px;
 }
 
