--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
 
+
 .container-fluid {
     box-shadow: 0px 5px #e1e1e1;
 }
@@ -16,13 +17,14 @@
   flex-wrap: wrap;
   gap: 20px;
   margin-inline: 20px;
+  margin-top: 35px;
 }
 
 .card {
   width: 280px;
   height: auto;
   margin-block: 10px;
-  border: 1px solid black;
+  border: 1px solid rgb(0, 0, 0);
   border-radius: 5px 5px 5px 0px;
   text-align: center;
   display: flex;
