--- a/backoffice.css
+++ b/backoffice.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
 
 .container-fluid {
-    box-shadow: 0px 5px #e1e1e1;
+  box-shadow: 5px 5px  25px -5px #000000;
 }
 
 .container-fluid h2 {
@@ -17,6 +17,8 @@
   gap: 20px;
   margin-inline: 20px;
   margin-top: 35px;
+  box-shadow: 0px 20px 20px 0px black;
+  padding-inline: 25px;
 }
 
 .card {
