--- a/formPut.css
+++ b/formPut.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
 
 .container-fluid {
-    box-shadow: 0px 5px #e1e1e1;
+  box-shadow: 5px 5px  25px -5px #000000;
 }
 
 .container-fluid h2 {
