--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 
 .container-fluid {
-    box-shadow: 0px 5px #e1e1e1;
+    box-shadow: 5px 5px  25px -5px #000000;
 }
 
 .container-fluid h2 {
@@ -18,10 +18,13 @@
   gap: 20px;
   margin-inline: 20px;
   margin-top: 35px;
+  box-shadow: 0px 20px 20px 0px black;
+  padding-inline: 25px;
 }
 
 .card {
-  width: 280px;
+  max-width: 280px;
+  min-width: 150px;
   height: auto;
   margin-block: 10px;
   border: 1px solid rgb(0, 0, 0);
