--- a/style.css
+++ b/style.css
@@ -23,8 +23,8 @@
 }
 
 .card {
-  max-width: 280px;
-  min-width: 150px;
+  width: 280px;
+  /* min-width: 150px; */
   height: auto;
   margin-block: 10px;
   border: 1px solid rgb(0, 0, 0);
