--- a/backoffice.css
+++ b/backoffice.css
@@ -2,6 +2,12 @@
 
 .container-fluid {
   box-shadow: 5px 5px  25px -5px #000000;
+  background: rgb(58, 58, 58);
+}
+
+.container-fluid button {
+border-radius: 5px;
+background: rgb(2, 200, 55);
 }
 
 .container-fluid h2 {
@@ -9,6 +15,8 @@
   font-weight: bold;
   font-size: 45px;
   text-shadow: 4px 4px 4px rgb(162, 160, 160);
+  color: rgb(2, 200, 55);
+  padding-right: 50px;
 }
 
 .container-products {
@@ -19,6 +27,9 @@
   margin-top: 35px;
   box-shadow: 0px 20px 20px 0px black;
   padding-inline: 25px;
+  border-radius: 5px 5px 5px 0px;
+  background: rgb(58, 58, 58);
+  border: 2px solid rgb(2, 200, 55);
 }
 
 .card {
@@ -27,6 +38,7 @@
   margin-block: 10px;
   border: 1px solid black;
   border-radius: 5px 5px 5px 0px;
+  border: 2px solid black;
   text-align: center;
   display: flex;
   flex-wrap: wrap;
@@ -42,6 +54,7 @@
 .card button {
   border-radius: 5px 5px 5px 0px;
   box-shadow: -2px 2px 5px 2px rgb(159, 158, 158);
+  background: rgb(2, 200, 55);
 }
 
 .card button:hover {
