--- a/formPut.css
+++ b/formPut.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Caveat:wght@400;700&display=swap");
 
 .container-fluid {
-  box-shadow: 5px 5px  25px -5px #000000;
+  box-shadow: 5px 5px 25px -5px #000000;
+  background: rgb(58, 58, 58);
 }
 
 .container-fluid h2 {
@@ -9,11 +10,14 @@
   font-weight: bold;
   font-size: 45px;
   text-shadow: 4px 4px 4px rgb(162, 160, 160);
+  color: rgb(2, 200, 55);
+  padding-right: 50px;
 }
 
 .nav-item button {
   border: none;
-  background: none;
+  border-radius: 5px;
+  background: rgb(2, 200, 55);
   font-size: 20px;
   margin-left: 20px;
 }
